# student-sistema-1-versija

./: .gitignore  CMakeLists.txt  Common.cpp  Common.h  Gidas.md  IsvestisIvestis.cpp  IsvestisIvestis.h  LICENSE  Laikas.cpp  Laikas.h  Laiko efektyvumo testai v0.3 .md  Laiko efektyvumo testai.md  Main.cpp  README.md  Skaiciavimai.cpp  Skaiciavimai.h  Studentų sistema 1.sln  Studentų sistema 1.vcxproj  Studentų sistema 1.vcxproj.filters  Vektoriaus testas.cpp  klaiduValdymas.cpp  klaiduValdymas.h  kursiokai.txt  main.cpp  masyvai.cpp  rule_of_5_tests.cpp  vektoriai.cpp  vektorius.h  versijos
.run/: studentu-sistema.run.xml
Papildomi var 1.0/deque/: CMakeLists.txt  deque.cpp
html/: _common_8cpp.html  _common_8cpp.js  _common_8cpp_source.html  _common_8h.html  _common_8h.js  _common_8h_source.html  _gidas_8md.html  _isvestis_ivestis_8cpp.html  _isvestis_ivestis_8cpp.js  _isvestis_ivestis_8cpp_source.html  _isvestis_ivestis_8h.html  _isvestis_ivestis_8h.js  _isvestis_ivestis_8h_source.html  _laikas_8cpp.html  _laikas_8cpp.js  _laikas_8cpp_source.html  _laikas_8h.html  _laikas_8h.js  _laikas_8h_source.html  _laiko_01efektyvumo_01testai_01v0_83_01_8md.html  _main_8cpp.html  _main_8cpp.js  _main_8cpp_source.html  _r_e_a_d_m_e_8md.html  _skaiciavimai_8cpp.html  _skaiciavimai_8cpp.js  _skaiciavimai_8cpp_source.html  _skaiciavimai_8h.html  _skaiciavimai_8h.js  _skaiciavimai_8h_source.html  _vektoriaus_01testas_8cpp.html  _vektoriaus_01testas_8cpp.js  _vektoriaus_01testas_8cpp_source.html  annotated.html  annotated_dup.js  build-_o1_2_c_make_files_24_83_80_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  build-_o1_2_c_make_files_24_83_80_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  (+259 more)
(+253 files in other folders)
